# richbot

./: CHANGELOG.md  README.md  richbot.cabal
app/: Database.hs  Main.hs  VendingMachineApi.hs  VendingMachineManager.hs
