cabal-version:      2.4
name:               richbot
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Arslan Armanuly
maintainer:         esiredrise@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable richbot
    main-is:          Main.hs
    other-modules:    
        Database,
        VendingMachineApi,
        VendingMachineManager

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base,
        telegram-bot-simple,
        telegram-bot-api,
        text,
        selda,
        selda-postgresql,
        http-client,
        http-conduit,
        aeson,
        bytestring
    hs-source-dirs:   app
    default-language: Haskell2010
